@@ -30,6 +30,8 @@ Core and Builtins
 Extension Modules
 -----------------
 
+- Support os.O_ASYNC and fcntl.FASYNC if the constants exist on the platform.
+
 - Support for Windows 9x has been removed from the winsound module.
 
 - bsddb module updated to version 4.6.4.
